--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="all"/>
 </head>
 <body>
-  <div class="container">
-      <header class="top">
-          <div class="row">
-              <div class="col s12 l2 center logo-img">
-                  <img class="responsive-img" src="img/gutemberg.jpg" alt="Gutemberg" />
-              </div>
+    <header class="top">
+        <div class="row white-back">
+            <div class="container">
+                <div class="col s12 l2 center logo-img">
+                    <img class="responsive-img" src="img/gutemberg.jpg" alt="Gutemberg" />
+                </div>
               <div class="col s12 l8 logo-txt">
                   <h3>Gutemberg Dantas</h3>
                   <div class="left-box">
@@ -38,217 +38,49 @@
                   </ul>
               </div>
           </div>
-      </header>
+          </div>
+    </header>
       
-      <section class="row">
-          <p class="justify">
-             Desenvolvedor web desde os 17 anos, desenvolvo sites e sistemas web para empresas, embaixadas, associações e pessoas.<br />
-              Estudante de Sistemas de Informações na Unieuro - DF.&nbsp; 
-              Técnico em informática com certificado de mérito pelo IESB DF.&nbsp;
-              <br />Fluente em inglês e estudante de outros idiomas. &nbsp;Projetos e exemplos de código no <a href="http://github.com/dantas16" title="Github">Github</a>
-          </p>
+      <section class="row azul-escuro">
+          <div class="container">
+            <p class="justify">
+                Desenvolvedor web desde os 17 anos, desenvolvo sites e sistemas web para empresas, embaixadas, associações e pessoas.<br />
+                Estudante de Sistemas de Informações na Unieuro - DF.&nbsp; 
+                Técnico em informática com certificado de mérito pelo IESB DF.&nbsp;
+                <br />Fluente em inglês e estudante de outros idiomas. &nbsp;Projetos e exemplos de código no <a href="http://github.com/dantas16" title="Github">Github</a>
+                <br /><b>Competências:</b> PHP OO, MVC, Java, JSP, JDBC, Servlet, JSF, Hibernate, JPA, Primefaces, nodejs, Javascript, ajax, angularjs, jquery, gulpjs, SQL, css, sass, 
+                bootstrap, materialize, html, json, xml, uml, git/svn, Linux ubuntu, apache, apache tomcat.
+            </p>
+          </div>
       </section>
-      <section class="row">
-          <h4 class="section-t"><strong>Experiência</strong></h4>
-          <div class="col s12 m4 exp">
-              <span class="amarelo"><strong>Banco do Brasil</strong></span>
-              <p>Estagiário na área de desenvolvimento na Vice Presidência de Serviços, Infraestrutura e operações.<br />
-              Análise e desenvolvimento de sistemas utilizando as tecnologias: Java, JSP, Servlet, JSF, Hibernate, JPA, Javascript, css, html, php, mysql.
-              </p>
+
+      <section class="row white-back">
+          <div class="container">
+            <h4 class="section-t"><strong>Experiência</strong></h4>
+            <div class="col s12 m4 exp">
+                <span class="amarelo"><strong>Banco do Brasil</strong></span>
+                <p>Estagiário na área de desenvolvimento na Vice Presidência de Serviços, Infraestrutura e operações.<br />
+                Análise e desenvolvimento de sistemas utilizando as tecnologias: Java, JSP, Servlet, JSF, Hibernate, JPA, Javascript, css, html, php, mysql.
+                </p>
+            </div>
+            <div class="col s12 m4 exp">
+                <span class="azul"><strong>The Guide</strong></span>
+                <p>
+                Desenvolvedor responsável por manter o sistema web funcionando sem interrupções e desenvolver novas tecnologias.<br />
+                PHP, javascript, mysql, css, html, xml, json, etc.
+                </p>
+            </div>
+            <div class="col s12 m4 exp">
+                <span class="verde"><strong>Freelancer</strong></span>
+                <p>
+                Desenvolvi sites e sistemas para empresas de SP, DF e CE. Já utilizei CMS prontos como joomla e wordpress, apesar de preferir
+                criar o sistema do zero.
+                </p>
+            </div>
           </div>
-          <div class="col s12 m4 exp">
-              <span class="azul"><strong>The Guide</strong></span>
-              <p>
-              Desenvolvedor responsável por manter o sistema web funcionando sem interrupções e desenvolver novas tecnologias.<br />
-              PHP, javascript, mysql, css, html, xml, json, etc.
-              </p>
-          </div>
-          <div class="col s12 m4 exp">
-              <span class="verde"><strong>Freelancer</strong></span>
-              <p>
-              Desenvolvi sites e sistemas para empresas de SP, DF e CE. Já utilizei CMS prontos como joomla e wordpress, apesar de preferir
-              criar o sistema do zero.
-              </p>
-          </div>
-    </section>
-    <section class="row">
-        <h4><strong>Tecnologias</strong></h4>
-        <div class="row">
-            <div class="col s12 m3">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator responsive-img" src="img/html5.png" alt="HTML5" />
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">HTML5<i class="material-icons right">more_vert</i></span>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">HTML5<i class="material-icons right">close</i></span>
-                        <p>Conhecimento avançado em HTML desde as primeiras versões até a 5.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m3">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator responsive-img" src="img/css.png" alt="CSS" />
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">CSS<i class="material-icons right">more_vert</i></span>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">CSS<i class="material-icons right">close</i></span>
-                        <p>Desenvolvimento de folhas de estilos usando css 3 e animações. Também bibliotecas como bootstrap e materialize.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m3">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator responsive-img" src="img/sass.png" alt="SASS" />
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">SASS<i class="material-icons right">more_vert</i></span>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">HTML5<i class="material-icons right">close</i></span>
-                        <p>Sass é um pré-processador de css, utilizo em projetos grandes que exigem melhor organização.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m3">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator responsive-img" src="img/bootstrap.png" alt="Bootstrap" />
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Bootstrap<i class="material-icons right">more_vert</i></span>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Bootstrap<i class="material-icons right">close</i></span>
-                        <p>Avançado em Bootstrap.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m3">
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator responsive-img" src="img/materialize.png" alt="Materialize" />
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Materialize<i class="material-icons right">more_vert</i></span>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Materialize<i class="material-icons right">close</i></span>
-                    <p>Avançado em Materialize.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m3">
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator responsive-img" src="img/js.jpg" alt="Javascript" />
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Javascript<i class="material-icons right">more_vert</i></span>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Javascript<i class="material-icons right">close</i></span>
-                    <p>Programação em javascript puro sem frameworks inclusive uso de ajax.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m3">
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator responsive-img" src="img/jquery.png" alt="Jquery" />
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Jquery<i class="material-icons right">more_vert</i></span>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Javascript<i class="material-icons right">close</i></span>
-                    <p>Uso de Jquery para aplicações simples no front-end, principalmente quando necessária animação.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m3">
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator responsive-img" src="img/angular.png" alt="Angular" />
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Angular<i class="material-icons right">more_vert</i></span>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Angular<i class="material-icons right">close</i></span>
-                    <p>Uso sempre que necessário e adequado ao projeto.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m3">
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator responsive-img" src="img/nodejs.png" alt="NodeJS" />
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">NodeJS<i class="material-icons right">more_vert</i></span>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">NodeJS<i class="material-icons right">close</i></span>
-                    <p>Conhecimento intermediário em NodeJS.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m3">
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator responsive-img" src="img/php.jpg" alt="PHP" />
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">PHP<i class="material-icons right">more_vert</i></span>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">PHP<i class="material-icons right">close</i></span>
-                    <p>Conhecimentos avançados em PHP Orientado a Objetos, padrões de projeto, webservices, etc.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m3">
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator responsive-img" src="img/java.png" alt="Java" />
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Java<i class="material-icons right">more_vert</i></span>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Java<i class="material-icons right">close</i></span>
-                    <p>Conhecimentos em JAVA, JSP, Servlet, JSF, JPA, Hibernate, JDBC, Primefaces.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m3">
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator responsive-img" src="img/mysql.jpg" alt="Mysql" />
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Mysql<i class="material-icons right">more_vert</i></span>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Mysql<i class="material-icons right">close</i></span>
-                    <p>Banco de Dados SQL, queries, triggers, etc.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+      </section>
 </div>
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
-
   </body>
 </html>
