--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
             <h4 class="section-t"><strong>Experiência</strong></h4>
             <div class="col s12 m4 exp">
                 <span class="amarelo"><strong>Banco do Brasil</strong></span>
-                <p>Estagiário na área de desenvolvimento na Vice Presidência de Serviços, Infraestrutura e operações.<br />
-                Análise e desenvolvimento de sistemas utilizando as tecnologias: Java, JSP, Servlet, JSF, Hibernate, JPA, Javascript, css, html, php, mysql.
+                <p>Análise e desenvolvimento de sistemas utilizando as tecnologias: Java, JSP, Servlet, JSF, Primefaces, Hibernate, JPA, Javascript, 
+                  css/sass, bootstrap, nodejs, html, php, mysql.
+                  <br/>Vice Presidência de Serviços, Infraestrutura e operações.
                 </p>
             </div>
             <div class="col s12 m4 exp">
