--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="cv.html" title="CV"><i class="fa fa-address-card"></i> CV</a></li>
                         <li><a href="https://github.com/Dantas16" title="GitHub"><i class="fab fa-github"></i> Github</a></li>
-                        <li><a href="#" title="Linkedin"><i class="fab fa-linkedin"></i> Linkedin</a></li>
+                        <li><a href="https://www.linkedin.com/in/gutemberg-dantas-021891127/" title="Linkedin"><i class="fab fa-linkedin"></i> Linkedin</a></li>
                         <li><a href="#contact" title="Contact"><i class="fa fa-envelope"></i> Contact</a></li>
                         <li><a href="#" title="Portuguese">BR</a></li>
                     </ul>
@@ -96,6 +96,7 @@
     <!-- img-circle -->
     <img src="img/webresp.png" class="img-responsive margin" style="display:inline" alt="Web Responsive" width="350" height="350">
     <h3>Web development, computer programmer, IT passionate</h3>
+    <p><a href="cv.html" class="btn btn-default" title="CV"><i class="fa fa-address-card"></i> See my CV</a></p>
 </div>
 
 <!-- Second Container -->
