--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+  <link rel="stylesheet" type="text/css" href="css/animate.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -70,13 +71,13 @@
                             <img src="img/flag_brazil.png" alt="Brazil" title="Brazil" witdh="50" height="30">
                         </a>
                     </div>
-                    <div class="col-xs-4 col-sm-8">
+                    <div class="col-xs-4 col-sm-8 animated fadeInLeft">
                         <span style="font-size: 1.3em; color:#000;">Gutemberg Dantas</span>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6">
-                <div class="collapse navbar-collapse" id="myNavbar">
+                <div class="collapse navbar-collapse animated fadeInDown" id="myNavbar">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="cv.html" title="CV"><i class="fa fa-address-card"></i> CV</a></li>
                         <li><a href="https://github.com/Dantas16" title="GitHub"><i class="fab fa-github"></i> Github</a></li>
@@ -92,10 +93,10 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-    <h3 class="margin">Bem vindo, Welcome, Bienvenido, Willkommen!</h3>
+    <h3 class="margin animated flip">Bem vindo, Welcome, Bienvenido, Willkommen!</h3>
     <!-- img-circle -->
     <img src="img/webresp.png" class="img-responsive margin" style="display:inline" alt="Web Responsive" width="350" height="350">
-    <h3>Web development, computer programmer, IT passionate</h3>
+    <h3 class="animated fadeInUp">Web development, computer programmer, IT passionate</h3>
     <p><a href="cv.html" class="btn btn-default" title="CV"><i class="fa fa-address-card"></i> See my CV</a></p>
 </div>
 
