Updating this mini site after years

--- a/index.html
+++ b/index.html
@@ -1,140 +1,62 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <title>Gutemberg Dantas - Web Developer, Programmer</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-  <link rel="stylesheet" type="text/css" href="css/animate.css">
-  <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <style>
-      body {
-          font: 20px Montserrat, sans-serif;
-          line-height: 1.8;
-          color: #f5f6f7;
-      }
-      p {font-size: 16px;}
-      .margin {margin-bottom: 45px;}
-      .bg-1 { 
-          background-color: #1abc9c; /* Green */
-          color: #ffffff;
-      }
-      .bg-2 { 
-          background-color: #474e5d; /* Dark Blue */
-          color: #ffffff;
-      }
-      .bg-3 { 
-          background-color: #ffffff; /* White */
-          color: #555555;
-      }
-      .bg-4 { 
-          background-color: #2f2f2f; /* Black Gray */
-          color: #fff;
-      }
-      .container-fluid {
-          padding-top: 70px;
-          padding-bottom: 70px;
-      }
-      .navbar {
-          padding-top: 15px;
-          padding-bottom: 15px;
-          border: 0;
-          border-radius: 0;
-          margin-bottom: 0;
-          font-size: 12px;
-          letter-spacing: 5px;
-      }
-      .navbar-nav  li a:hover {
-          color: #1abc9c !important;
-      }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+    <title>CV Gutemberg Dantas</title>
+    <link rel="stylesheet" href="css/w3.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
+    <link rel="stylesheet" href="css/index.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 </head>
 <body>
-<!-- Navbar -->
-<nav class="navbar navbar-default">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="navbar-header">
-                    <div class="col-sm-1">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>                        
-                        </button>
-                    </div>
-                    <div class="col-xs-2 col-sm-2">
-                        <a href="#">
-                            <img src="img/flag_brazil.png" alt="Brazil" title="Brazil" witdh="50" height="30">
-                        </a>
-                    </div>
-                    <div class="col-xs-4 col-sm-8 animated fadeInLeft">
-                        <span style="font-size: 1.3em; color:#000;">Gutemberg Dantas</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="collapse navbar-collapse animated fadeInDown" id="myNavbar">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="cv.html" title="CV"><i class="fa fa-address-card"></i> CV</a></li>
-                        <li><a href="https://github.com/Dantas16" title="GitHub"><i class="fab fa-github"></i> Github</a></li>
-                        <li><a href="https://www.linkedin.com/in/gutemberg-dantas-021891127/" title="Linkedin"><i class="fab fa-linkedin"></i> Linkedin</a></li>
-                        <li><a href="#contact" title="Contact"><i class="fa fa-envelope"></i> Contact</a></li>
-                        <li><a href="#" title="Portuguese">BR</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</nav>
-
-<!-- First Container -->
-<div class="container-fluid bg-1 text-center">
-    <h3 class="margin animated flip">Bem vindo, Welcome, Bienvenido, Willkommen!</h3>
-    <!-- img-circle -->
-    <img src="img/webresp.png" class="img-responsive margin" style="display:inline" alt="Web Responsive" width="350" height="350">
-    <h3 class="animated fadeInUp">Web development, computer programmer, IT passionate</h3>
-    <p><a href="cv.html" class="btn btn-default" title="CV"><i class="fa fa-address-card"></i> See my CV</a></p>
+<div class="row text-center mb-4">
+  <div class="col-12 main animated fadeIn">
+    <h1>Gutemberg Dantas</h1>
+    <ul class="contact mt-4">
+      <li>
+        <i class="fa fa-home"></i> Brasilia, Distrito Federal - Brazil
+      </li>
+      <li>
+        <i class="fa fa-briefcase"></i> Software Architect, Web specialist, Fullstack Teacher
+      </li>
+      <li>
+        <a href="mailto:gutembergdantas16@hotmail.com" title="mailto:gutembergdantas16@hotmail.com">
+          <i class="fa fa-envelope fa-fw"></i> gutembergdantas16@hotmail.com
+        </a>
+      </li>
+    </ul>
+    <ul class="links">
+      <li>
+        <a href="https://github.com/Dantas16" title="GitHub">
+          <i class="fab fa-github"></i> Github
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/gutemberg-dantas-021891127/" title="Linkedin">
+          <i class="fab fa-linkedin"></i> Linkedin</a></li>
+      <li>
+        <a href="mailto:gutembergdantas16@hotmail.com" title="Contact">
+          <i class="fa fa-envelope"></i> Contact</a>
+      </li>
+    </ul>
+  </div>
 </div>
-
-<!-- Second Container -->
-<div class="container-fluid bg-2 text-center">
-  <h3 class="margin"><i class="fa fa-user-circle"></i> About</h3>
-    <p>Hi, I am Gutemberg, web developer since I was 17 years old.<br/>
-       I develop websites, web system, intranet, e-commerce, app, etc. Also IT consultancy for companies, embassies, offices, person, etc.
-       <br/>
-       Pure Javascript, jquery, angular, react, nodejs, mobile ionic, typescript, html, css/sass, php oo, MVC, java, Servlet, JSP, JSF, Primefaces, SQL, python. <br/>Agile methodology, scrum, kanban, trello, software egineering, etc.
-       <br/><br/>
-       <a href="cv.html" class="btn btn-default btn-lg">
-           <span class="glyphicon glyphicon-search"></span> Read More
-       </a>
-    </p>
-</div>
-
-<!-- Third Container (Grid) -->
-<div class="container-fluid bg-3 text-center">    
-  <h3 class="margin"><i class="fa fa-cubes"></i> Projects</h3><br>
-  <div class="row">
-    <div class="col-sm-4">
-      <p>APP to help you to control your finances and save money. The purpose its to avoid debts, registering each expense and show how much rest available in cash to spend, like a book where you register a coffe, for example.</p>
-      <img src="img/mobileapp.png" class="img-responsive margin" style="width:100%" alt="Finance App ">
+<div class="row bg-1 text-center pb-4">
+  <div class="col-12">
+    <h3 class="animated fadeInUp mt-4 mb-4">
+      Thanks for stay here, see my presetation at Campus Party Brasilia 2022 :)
+    </h3>
+    <div class="mt-4">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/bTttYerRsz4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <div class="col-sm-4"> 
-      <p>School web system to control the students enrollment, grades, frequence, teacher classes, notices, etc. One place where parents can follow their son or daughter from any place.</p>
-      <img src="img/college.jpg" class="img-responsive margin" style="width:100%" alt="School App">
-    </div>
-    <div class="col-sm-4"> 
-      <p>App where people can pay for service and products from any place and send the code for someone receive personaly without money or credit card.</p>
-      <img src="img/payment.png" class="img-responsive margin" style="width:100%" alt="Payment">
+    <div>
+      Please, follow me at linkedin if you want to contact, I am always happy to help in any subject or just talk.
     </div>
   </div>
 </div>
-<!-- Footer -->
-<footer class="container-fluid bg-4 text-center">
-    <p><i>If you want, you can do, the life is short to stay stopped</i></p> 
-</footer>
 </body>
 </html>
